[package]
name = "automations"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
inquire = "0.9.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.9.10"
zbus = "5.12.0"
